force-app/main/default/objects/Best_Practice__c/Best_Practice__c.object-meta.xml
<CustomObject>
    <customHelp>Best_Practice_Definitions</customHelp>
    <description>Best Practice for sales</description>
    <label>Best Practice</label>
    <nameField>
        <label>Registry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Best Practices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>