force-app/main/default/objects/Best_Practice__c/fields/Best_Practice_Target__c.field-meta.xml
<CustomField>
    <fullName>Best_Practice_Target__c</fullName>
    <inlineHelpText>Define the barrier, problem, need, or area of improvement that was the target of your best practice.  Please describe the impact that this factor had on your sales. (Required: 1000 character limit)</inlineHelpText>
    <label>Best Practice Target</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>