force-app/main/default/objects/Best_Practice__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <inlineHelpText>Select your business segment</inlineHelpText>
    <label>Business Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facilities Supplies</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Printing Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>