force-app/main/default/objects/Best_Practice__c/fields/Challenges__c.field-meta.xml
<CustomField>
    <fullName>Challenges__c</fullName>
    <inlineHelpText>Were there significant challenges that you encountered in implementing your strategy? How did you overcome them? (Required:  2000 character limit)</inlineHelpText>
    <label>Challenges</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>