force-app/main/default/objects/Best_Practice__c/fields/Conclusion__c.field-meta.xml
<CustomField>
    <fullName>Conclusion__c</fullName>
    <inlineHelpText>What lessons did you learn from the implementation of your “best practice”/”successful strategy” that would be helpful to others?   What would you do differently?  (Required:  1000 character limit)</inlineHelpText>
    <label>Conclusion</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>