force-app/main/default/objects/Best_Practice__c/fields/Description_of_Practice__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Practice__c</fullName>
    <inlineHelpText>Describe the implementation of your successful strategy. Outline specific information on activities and methods, including relevant information on any key factors such as: operations, transportation, ERS, Supply Chain, Cust. Serv, timeframes, costs, etc.</inlineHelpText>
    <label>Description of Practice</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>