force-app/main/default/objects/Best_Practice__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>Select your division location</inlineHelpText>
    <label>Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>