force-app/main/default/objects/Best_Practice__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Title</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>