force-app/main/default/objects/Best_Practice__c/fields/Objectives_of_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Objectives_of_Strategy__c</fullName>
    <inlineHelpText>What were the intended goals and objectives in deciding to implement this practice?  What was (were) the factor(s) targeted for improvement? (Required:  1000 character limit)</inlineHelpText>
    <label>Objectives of Strategy</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>