force-app/main/default/objects/Best_Practice__c/fields/Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Recommendations__c</fullName>
    <inlineHelpText>How easily could this practice be adopted or adapted by other sales reps? What recommendations do you have for other sales reps looking to address a similar issue?</inlineHelpText>
    <label>Recommendations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>