force-app/main/default/objects/Best_Practice__c/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <inlineHelpText>What were the results of your strategy and how well did the outcome meet your goals? By what measure do you see this strategy as successful? (Required:  1000 character limit)</inlineHelpText>
    <label>Results</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>